@startuml
skinparam linetype ortho


class ReadJSONFile {
- parser: JSONParser
- latitude: double
- longitude: double
- altitude: double
- gaList: GAList
- filePath: String

+ ReadJSONFile()
+ readFile()
+ importGAs()
+ createGeographicalArea()
+ createSensor()
+ addGASensors()
+ setCoordinates()
+ getStartDate()
}

class GeographicalArea {
- identification : String
- designation : String
- typeOfGa: TypeGA
- location: Location
- sensorListInGa: SensorList
- occupation: OccupationArea
- parentGa: GeographicalArea

+ GeographicalArea()
+ toDTO()
 }

 class GeographicalAreaDTO{
 - identification: String
 - designation: String
 - sensorList: List<SensorDTO>

 + GeographicalAreaDTO()
 + getIdentification()
 + getDesignation()
 + getSensorListDTO()
 }

 class Sensor {
 - id: String
 - designation: String
 - location: Location
 - sensorType: SensorType
 - startDate: Calendar
 - unit: String
 - readingList: ReadingList
 + Sensor()
 }

class SensorList{
- sensorList: List<Sensor>

+ addSensor()
}

class SensorDTO{
- id: String
- designation: String
- readingListDTO: List<ReadingDTO>

+ getId()
+ getDesignation()
+ getReadingListDTO()
}

 class GAList {
- gaList: List<GeographicalArea>

+ addGA()
  }



ReadJSONFile ..> GeographicalArea
ReadJSONFile ..> Sensor

GeographicalArea ..> GeographicalAreaDTO
Sensor ..> SensorDTO



Sensor"*" -- SensorList
GAList - "*"GeographicalArea



@enduml